Socket service  connection fix. CSS Alignment fix for connection map

--- a/frontend/css/connectionMap.css
+++ b/frontend/css/connectionMap.css
@@ -89,8 +89,8 @@
 }
 ul.button-center{
   position: absolute;
-  width: 40%;
-  left: 30%;
+  width: 100%;
+  margin: 1.3em 0;
   text-align: center;
 }
 
